# migo

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
cygo/: CMakeLists.txt
cygo/cygo/: CMakeLists.txt  chain.cpp  features.hpp  move.hpp  neighbor_counter.hpp  state.cpp  state.hpp
cygo/cygo/binding/: CMakeLists.txt  features.cpp  main.cpp  miscs.hpp
cygo/cygo/tests/: test_chain_group.cpp  test_features.cpp  test_state.cpp
cygo_cc/: .gitignore  CMakeLists.txt
cygo_cc/cmake/: gtest.cmake  pybind11.cmake  third-party.cmake
cygo_cc/cygo/: chain.cpp  chain.hpp  chain_group.cpp  chain_group.hpp  color.hpp  features.hpp  move.cpp  neighbor_counter.cpp  state.cpp  state.hpp  state_impl.cpp  state_impl.hpp  zobrist_hash.cpp  zobrist_hash.hpp
cygo_cc/cygo/binding/: CMakeLists.txt  features.cpp  features.hpp  main.cpp  miscs.cpp  miscs.hpp
cygo_cc/cygo/tests/: CMakeLists.txt  test_chain.cpp  test_features.cpp  test_move.cpp  test_neighbor_counter.cpp  test_state.cpp  test_state_impl.cpp  test_zobrist_hash.cpp
doc-api/: doxygen.conf
doc-api/source/: conf.py  cygo.rst  cygo_cc.rst  index.rst  migo.dataset.rst  migo.drawing.rst  migo.features.rst  migo.gtp.rst  migo.network.rst  migo.rst  pygo.dataset.rst  pygo.drawing.rst  pygo.features.rst  pygo.gtp.rst  pygo.network.rst  pygo.rst
migo/: __init__.py  dataset.py  dataset_transform.py  drawing.py  hash.py  misc.py  network.py  record.py  sgfutils.py  state.py
migo/features/: __init__.py  migo.py  transformation.py  utils.py
migo/gtp/: __init__.py  gogui.py  gtp.py  utils.py
migo/utility/: goguirunner.py  model.py  rltrain.py  selfplay.py
pygo/: __init__.py  dataset.py  drawing.py  hash.py  misc.py  network.py  record.py  sgfutils.py  state.py
pygo/features/: __init__.py  cygo.py  pygo.py  transformation.py  utils.py
pygo/gtp/: __init__.py  gfx.py  gogui.py  gtp.py  utils.py
pygo/utility/: model.py  selfplay.py
scripts/: gomodel  goselfplay
tests/migo/: test_dataset.py  test_sgfutils.py  test_state.py
tests/migo/features/: test_consistency.py  test_cygo_features.py
tests/migo/gtp/: test_gogui.py  test_utils.py
tests/pygo/: test_hash.py  test_sgfutils.py  test_state.py
tests/pygo/features/: test_consistency.py  test_cygo_features.py  test_pygo_features.py  test_transformation.py
tests/pygo/gtp/: test_gfx.py  test_gogui.py  test_gtp.py  test_utils.py
